add initial tests